--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div id="butns">
             <div id="row1">
 
-              <input type=button id="stopwatch" class="btn1" onClick=window.open("","demo","width=550,height=300,left=150,top=200,toolbar=0,status=0,"); value="Stopwatch">
+              <input type=button id="stopwatch" class="btn1" onClick=window.open("time.html","demo","width=550,height=300,left=150,top=200,toolbar=0,status=0,"); value="Stopwatch">
               <input type=button id="timer"class="btn1" onClick=window.open("time.html","demo","width=550,height=300,left=150,top=200,toolbar=0,status=0,"); value="Timer">
 
 
